# hello_gmm

./: CMakeLists.txt  GMM.cpp  GMM.h  KMeans.cpp  KMeans.h  README.md  main.cpp
